Log in
Skip to main content
Skip to sidebar
Linked Applications
Loading…
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt
QTBUG-85862
Material opacity is ignored when DefaultMaterial.NoLighting is used
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Done
Priority:
P2: Important
Fix Version/s:
5.15.1
Affects Version/s:
5.15.1
Component/s:
Quick: 3D
Labels:
None
Commits:
0aabccab2cb502b47508e9eef41a7e0d74aac9e0 (qt/qtquick3d/5.15)
Description
Material opacity is ignored when DefaultMaterial.NoLighting is used.
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Miikka Heikkinen
Reporter:
Miikka Heikkinen
Votes:
0
Vote for this issue
Watchers:
1
Start watching this issue
Dates
Created:
03 Aug '20 13:28
Updated:
04 Aug '20 07:36
Resolved:
04 Aug '20 07:36
Gerrit Reviews
There are no open Gerrit changes
Show
There are 2 closed Gerrit changes
Hide
There are 2 closed Gerrit changes
Fix NoLighting material opacity handling
Gerrit Review:
Fix NoLighting material opacity handling
Gerrit Review: