Fix NoLighting material opacity handling

Change-Id: Id809703dbeffe26baa0d11345447c253563115c9
Fixes: QTBUG-85862
Reviewed-by: Mahmoud Badri <mahmoud.badri@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>